Add module Purchase and bug fixes